Cope with error verbose directive in both versions 2 and 3 of Bison
The file src/mwrap.y is transformed into src/mwrap.y.in, which now
contains an @ERROR_VERBOSE@ tag which is replaced by the Makefile to
generate the final src/mwrap.y. The latter will compile correctly
against both versions 2 and 3 of Bison.

--- a/src/mwrap.y.in
+++ b/src/mwrap.y.in
@@ -106,15 +106,7 @@ inline void add_func(Func* func)
 %type <expr> arrayspec exprs exprrest expr
 %type <inherits> inheritslist inheritsrest
 
-%error-verbose
-/* Avoid deprecated Bison directive
-The directive %error-verbose is deprecated since Bison 3.0 (and
-advertised as such since Bison 3.3). Use "%define parse.error verbose"
-instead. MacOS Xcode, Mar 10, 2025, bison --version, bison (GNU Bison) 2.3
-*/
-/*
-%define parse.error verbose
-*/
+@ERROR_VERBOSE@
 
 %%
 statements: statement statements | ;
