Fix test_char tests, only scalar char type is currently supported

--- a/testing/Makefile
+++ b/testing/Makefile
@@ -2,7 +2,7 @@ include ../make.inc
 
 all: test_transfers test_cpp_complex $(TESTC99COMPLEX) test_syntax \
 	test_typecheck test_catch test_fortran1 test_fortran2 \
-	test_redirect test_include test_single_cpp
+	test_redirect test_include test_single_cpp test_char_cpp
 # run the tests...
 	octave-cli --no-init-file --quiet test_all.m
 
